--- a/audio_test_offline.html
+++ b/audio_test_offline.html
@@ -599,7 +599,7 @@
         }
 
         recognition = new webkitSpeechRecognition();
-        recognition.lang = 'vi-VN'; // Đặt ngôn ngữ nhận diện là tiếng Việt
+        recognition.lang = 'en-US'; // Đặt ngôn ngữ nhận diện là tiếng Việt
         recognition.interimResults = false;
         recognition.maxAlternatives = 1;
 
