--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>My PWA</title>
 
     <!-- Link đến Manifest -->
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="/manifest.json">
     
     <!-- Link đến Favicon -->
-    <link rel="icon" href="./icon-192x192.png" type="image/png">
+    <link rel="icon" href="/icon-192x192.png" type="image/png">
 
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
@@ -23,7 +23,7 @@
     <script>
         // Kiểm tra và đăng ký Service Worker
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('./service-worker.js')
+            navigator.serviceWorker.register('/service-worker.js')
                 .then(reg => console.log('Service Worker registered:', reg))
                 .catch(err => console.log('Service Worker registration failed:', err));
         }
