Updat main files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My PWA</title>
 
     <!-- Link đến Manifest -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/nguyensunone.github.io/manifest.json">
     
     <!-- Link đến Favicon -->
     <link rel="icon" href="/icon-192x192.png" type="image/png">
