--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My PWA</title>
-    <link rel="manifest" href="manifest.json">
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
-    </style>
-</head>
-<body>
-    <h1>Welcome to My PWA</h1>
-    <p>This is a simple Progressive Web App.</p>
-    <a href="audio_test_offline.html">Go to Audio Test Page</a>
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js').then(function(registration) {
-                console.log('Service Worker registered with scope:', registration.scope);
-            }).catch(function(error) {
-                console.log('Service Worker registration failed:', error);
-            });
-        }
-    </script>
-</body>
+<!DOCTYPE html>  
+<html lang="en">  
+<head>  
+    <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <title>My PWA</title>  
+    <link rel="manifest" href="manifest.json">  
+    <style>  
+        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }  
+    </style>  
+</head>  
+<body>  
+    <h1>Welcome to My PWA</h1>  
+    <p>This is a simple Progressive Web App.</p>  
+    <a href="audio_test_offline.html">Go to Audio Test Page</a>  
+    <script>  
+        if ('serviceWorker' in navigator) {  
+            window.addEventListener('load', function() {  
+                navigator.serviceWorker.register('service-worker.js')  
+                .then(function(registration) {  
+                    console.log('Service Worker registered with scope:', registration.scope);  
+                })  
+                .catch(function(error) {  
+                    console.error('Service Worker registration failed:', error);  
+                });  
+            });  
+        }  
+    </script>  
+</body>  
 </html>
