--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>  
     <h1>Welcome to My PWA</h1>  
     <p>This is a simple Progressive Web App.</p>  
-    <a href="audio_test_offline.html">Go to Audio Test Page</a>  
+    <a href="audio_test_offline.html">Go to Audio Test Page</a>
+    <a href="reading_test_offline.html">Go to Reading Test Page</a>  
     <script>  
         if ('serviceWorker' in navigator) {  
             window.addEventListener('load', function() {  
