--- a/json_test_offline.html
+++ b/json_test_offline.html
@@ -208,8 +208,8 @@
 
     // Danh sách các file bài học và mapping tương ứng
     const lessons = [
-        { name: 'reading_90.json', mapping: 'mapping_Reading_90.json' },
-        { name: 'writing_88.json', mapping: 'mapping_writing_88.json' },
+        { name: 'Reading_90.json', mapping: 'mapping_Reading_90.json' },
+        { name: 'Writing_88.json', mapping: 'mapping_writing_88.json' },
         { name: 'TQT_100.json', mapping: 'mapping_TQT_100.json' }
         
         // Thêm các bài học khác nếu cần
