cập nhật bài học mới

--- a/test_offline.html
+++ b/test_offline.html
@@ -338,6 +338,7 @@ function updateQuestionCounter() {
     // Danh sách các file bài học và mapping tương ứng
     const lessons = [
         { name: 'US_dialog.json', mapping: 'mapping_US_dialog.json' },
+        { name: 'En_US_Term.json', mapping: 'mapping_En_US_Term.json' }
               
         // Thêm các bài học khác nếu cần
     ];
