--- a/test_offline.html
+++ b/test_offline.html
@@ -177,6 +177,26 @@
     	    font-size: 20px; /* Giảm kích thước chữ */
 	}
     </style>
+    <style>
+    .controls button {
+        display: inline-block;
+        margin: 10px 5px;
+        padding: 10px 20px;
+        font-size: 16px;
+        border: none;
+        border-radius: 4px;
+        background-color: #61dafb;
+        color: #282c34;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        height: 40px; /* Đặt chiều cao cố định cho các nút */
+        line-height: 20px; /* Đặt chiều cao dòng để căn giữa văn bản */
+    }
+
+    .controls button:hover {
+        background-color: #21a1f1;
+    }
+</style>
 </head>
 <body>
 
@@ -188,10 +208,10 @@
 
 <!-- Nhóm các nút kiểm tra -->
 <div class="controls">
-    <button id="checkAnswerButton" onclick="checkAnswer()">Kiểm Tra Mặt Trước</button>
-    <button id="checkAnswerBackButton" onclick="checkAnswerBack()">Kiểm Tra Mặt Sau</button>
-    <button id="speakCheckButton" onclick="startSpeechRecognition(true)">Kiểm Tra Nói Mặt Trước</button>
-    <button id="speakCheckBackButton" onclick="startSpeechRecognition(false)">Kiểm Tra Nói Mặt Sau</button>
+    <button id="checkAnswerButton" onclick="checkAnswer()">Viết Mặt Trước</button>
+    <button id="checkAnswerBackButton" onclick="checkAnswerBack()">Viết Mặt Sau</button>
+    <button id="speakCheckButton" onclick="startSpeechRecognition(true)">Nói Mặt Trước</button>
+    <button id="speakCheckBackButton" onclick="startSpeechRecognition(false)">Nói Mặt Sau</button>
 </div>
 <textarea id="writingCheckBack" placeholder="Nhập câu trả lời mặt sau..." onkeydown="handleKeyDownBack(event)"></textarea>
 
@@ -200,24 +220,25 @@
 </div>
 <div id="notification"></div>
 
-</select>
-<button onclick="toggleStyle()">Đổi màu</button>
-<button onclick="prevWord()">Trước</button>
-<button onclick="flipCard()">Lật Thẻ</button>
-<button onclick="nextWord()">Tiếp Theo</button>
-<button id="repeatButton" onclick="repeatPronunciation()">Lặp Lại</button>
-<button id="autoFlipButton" onclick="toggleAutoFlip()">Tự Động</button>
-<button id="toggleModeButton" onclick="toggleMode()">Theo Thứ Tự</button>
+<div class="button-container">
+    <button onclick="toggleStyle()">Đổi màu</button>
+    <button onclick="prevWord()">Trước</button>
+    <button onclick="flipCard()">Lật Thẻ</button>
+    <button onclick="nextWord()">Tiếp Theo</button>
+    <button id="repeatButton" onclick="repeatPronunciation()">Lặp Lại</button>
+    <button id="autoFlipButton" onclick="toggleAutoFlip()">Tự Động</button>
+    <button id="toggleModeButton" onclick="toggleMode()">Theo Thứ Tự</button>
+</div>
 
 <!-- Dropdown để chọn bài học -->
 <select id="lessonSelector" onchange="loadLesson()">
     <!-- Các tùy chọn sẽ được thêm tự động bằng JavaScript -->
-
 <div class="controls">
     <input type="number" id="startQuestion" placeholder="Nhập số câu hỏi bắt đầu" min="1" max="138">
     <input type="number" id="questionCount" placeholder="Số câu hỏi" min="1" max="138">
     <button onclick="startSession()">Bắt Đầu Phiên Học</button>
 </div>
+</select>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
@@ -434,6 +455,9 @@ function updateQuestionCounter() {
                 break;
             case 'End': // Phím End
                 startSpeechRecognition();
+                break;
+            case 'Home': // Phím Home
+                startSpeechRecognition(true);
                 break;
             default:
                 break;
