--- a/test_offline.html
+++ b/test_offline.html
@@ -197,6 +197,50 @@
         background-color: #21a1f1;
     }
 </style>
+<style>
+    /* Thêm CSS cho màn hình nhỏ */
+    @media only screen and (max-width: 600px) {
+        body {
+            padding: 10px;
+        }
+        #vocabLabel {
+            font-size: 20px;
+            padding: 10px;
+        }
+        .card {
+            padding: 10px;
+        }
+        input, button {
+            font-size: 14px;
+            padding: 8px;
+        }
+        #answerInput, #writingCheckBack {
+            width: 100%;
+            max-width: 100%;
+            font-size: 16px;
+        }
+        .controls button {
+            padding: 8px 16px;
+            font-size: 14px;
+            height: auto;
+            line-height: normal;
+        }
+        .button-container button {
+            padding: 8px 16px;
+            font-size: 14px;
+        }
+        #questionCounter {
+            font-size: 14px;
+        }
+        #speechResult {
+            max-width: 100%;
+            font-size: 12px;
+        }
+        #recognizedSpeech {
+            font-size: 16px;
+        }
+    }
+</style>
 </head>
 <body>
 
