Cập Nhật Ứng Dụng

--- a/test_offline.html
+++ b/test_offline.html
@@ -252,10 +252,10 @@
 
 <!-- Nhóm các nút kiểm tra -->
 <div class="controls">
-    <button id="checkAnswerButton" onclick="checkAnswer()">Viết Trước</button>
-    <button id="checkAnswerBackButton" onclick="checkAnswerBack()">Viết Sau</button>
-    <button id="speakCheckButton" onclick="startSpeechRecognition(true)">Nói Trước</button>
-    <button id="speakCheckBackButton" onclick="startSpeechRecognition(false)">Nói Sau</button>
+    <button id="checkAnswerButton" onclick="checkAnswer()">Viết_MT</button>
+    <button id="checkAnswerBackButton" onclick="checkAnswerBack()">Viết_MS</button>
+    <button id="speakCheckButton" onclick="startSpeechRecognition(true)">Nói_MT</button>
+    <button id="speakCheckBackButton" onclick="startSpeechRecognition(false)">Nói_MS</button>
 </div>
 <textarea id="writingCheckBack" placeholder="Nhập câu trả lời mặt sau..." onkeydown="handleKeyDownBack(event)"></textarea>
 
